<resources>
    <string name="app_name">OPM Music Recommender</string>
    <string name="slogan"></string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="disagree">Disagree</string>
    <string name="_1_50">1/50</string>
    <string name="_0">0</string>

    <string name="slightly_disagree">Slightly Disagree</string>
    <string name="neutral">Neutral</string>
    <string name="slightly_agree">Slightly Agree</string>
    <string name="agree">Agree</string>
    <string name="start">START</string>
    <string name="title_activity_home2">home2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home</string>
    <string name="user">User</string>
    <string name="description">Description</string>
    <string name="band_name">Band Name</string>
    <string name="privacy_policy">https://igisobrevinas5.wixsite.com/website</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
