<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".personalityTest">



    <TextView
        android:id="@+id/question_text"
        android:textColor="@android:color/white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/group"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnAnswerA"
                android:text="@string/disagree"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="#FF8a80"
                android:layout_margin="8dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnAnswerB"
                android:text="@string/slightly_disagree"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="#FF8a80"
                android:layout_margin="8dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnAnswerC"
                android:text="@string/neutral"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="#FF8a80"
                android:layout_margin="8dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnAnswerD"
                android:text="@string/slightly_agree"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="#FF8a80"
                android:layout_margin="8dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnAnswerE"
                android:text="@string/agree"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="#FF8a80"
                android:layout_margin="8dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>



    </RelativeLayout>
</RelativeLayout>